--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title></title>
+  <title>每日精選好物</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
@@ -85,14 +85,14 @@
     </div>
 
     <div class="card">
-      <img src="B.jpg" alt="Tower Fan">
-      <div>
-        <h2>🌬️ Tower fan</h2>
-        <p>Stay cool and comfortable with the Dreo Tower Fan. Its sleek, modern design fits seamlessly into any room, while powerful airflow and customizable settings deliver instant relief. The included remote and quiet operation make it ideal for both work and sleep environments.</p>
-        <a class="buy-btn" href="https://amzn.to/3HP82uf" target="_blank">Buy on Amazon →</a>
+        <img src="D.jpg" alt="Portable Handheld Turbo Fan">
+        <div>
+          <h2>🖥️ Handheld Turbo Fan</h2>
+          <p>Stay cool anywhere, anytime with this Portable Handheld Fan by PlayHot – your personal breeze on the go. Whether you're commuting, at a summer festival, or just lounging outdoors, this sleek mini fan delivers powerful airflow in a compact, rechargeable design.</p>
+          <a class="buy-btn" href="https://amzn.to/4k2WmRO" target="_blank">Buy on Amazon →</a>
+        </div>
       </div>
-    </div>
-
+      
     <div class="card">
       <img src="C.jpg" alt="Standing Desk">
       <div>
@@ -101,6 +101,8 @@
         <a class="buy-btn" href="https://amzn.to/3FMkBpD" target="_blank">Buy on Amazon →</a>
       </div>
     </div>
+
+    
 
     <footer>
       <p>As an Amazon Associate I earn from qualifying purchases.</p>
